ver 0.20 (not yet released)
* protocol
  - "commands" returns playlist commands only if playlist_directory configured
  - "search"/"find" have a "window" parameter
  - report song duration with milliseconds precision
  - "sticker find" can match sticker values
* tags
  - ape, ogg: drop support for non-standard tag "album artist"
    affected filetypes: vorbis, flac, opus & all files with ape2 tags
    (most importantly some mp3s)
* decoder
  - ffmpeg: support ReplayGain and MixRamp
  - ffmpeg: support stream tags
* output
  - jack: reduce CPU usage
  - pulse: set channel map to WAVE-EX
  - recorder: record tags
  - recorder: allow dynamic file names
* mixer
  - null: new plugin
* resampler
  - new block "resampler" in configuration file
    replacing the old "samplerate_converter" setting
  - soxr: allow multi-threaded resampling
* reset song priority on playback
* write database and state file atomically
* remove dependency on GLib
* database
  - proxy: add TCP keepalive option

ver 0.19.9 (2015/02/06)
* decoder
  - dsdiff, dsf: raise ID3 tag limit to 1 MB
* playlist: fix loading duplicate tag types from state file
* despotify: remove defunct plugin
* fix clock integer overflow on OS X
* fix gcc 5.0 warnings
* fix build failure with uClibc
* fix build failure on non-POSIX operating systems
* fix dependency issue on parallel Android build
* fix database/state file saving on Windows

ver 0.19.8 (2015/01/14)
* input
  - curl: fix bug after rewinding from end-of-file
  - mms: reduce delay at the beginning of playback
* decoder
  - dsdiff, dsf: allow ID3 tags larger than 4 kB
  - ffmpeg: support interleaved floating point
* fix clang 3.6 warnings
* fix build failure on NetBSD

ver 0.19.7 (2014/12/17)
* input
  - nfs: fix crash while canceling a failing file open operation
  - nfs: fix memory leak on connection failure
  - nfs: fix reconnect after mount failure
  - nfs: implement mount timeout (60 seconds)
* storage
  - nfs: implement I/O timeout (60 seconds)
* playlist